# learn-openGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.txt  openGL入门.md  线性代数的本质.md
include/: Camera.h  Gobject.h  Instance.h  Light.h  Material.h  Mesh.h  Model.h  Renderer.h  Shader.h  Texture.h  Transform.h  exglm.hpp  model_loader.h  tool.h
include/glad/: glad.c  glad.h
include/glm/ext/: matrix_transform.inl
include/tool/: Any.hpp  exglm.hpp  model_loader.h
learn/: openGL入门.md  优化.md  光线追踪.md  几何.md  反射模型与材质.md  图形学基础.md  图形学杂记.md  线性代数的本质.md
models/: coordinate.3mf  test.glb
shader/: color.fs  color.vs  color_level.frag  color_level.fs  color_level.vs  disney.frag  myshader.fs  myshader.vs  simple_light.fs  simple_light.vs  specularmap.fs  specularmap.vs  standard.frag  standard.fs  standard.vert  standard.vs
src/: Camera.cpp  Camera.h  Instance.cpp  Instance.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  glad.c  model_loader.cpp  tool.cpp
src/material/: DisneyMaterial.cpp  DisneyMaterial.h  Material.cpp  Material.h  PhongMaterial.cpp  PhongMaterial.h
src/tool/: exglm.hpp  loader.cpp  loader.h  model_loader.cpp  stb_image.cpp  tool.cpp  tool.h
terrain/: terrain.dem  terrain1.dem  terrain2.dem
